# learn-demo

./: .gitignore  README.md
CBase/: Makefile  callbak.c  func.c  getaddrinfo.c  getoption.c  inotify.c  prctl.c
CBase/dl/: a.c  b.c  main  main.c
CppBase/: C++11_1.cpp  C++11_2.cpp  C++11_3.cpp  C++11_4.cpp  C++11_5.cpp  Makefile  Singleton.hpp  a.out  access.cpp  addressof.cpp  callback.cpp  read_dir.cpp  regex.cpp  syslog.cpp  syslog.h  thread.cpp  tuple  tuple.cpp
DataStruct/: BTS.c  BinSearch.c  EightQueen.c  Hanoi.c  Josephus.c  KMP.c  Makefile  a.out  bloomfilter.c  chessboard.c  fib.c  greedy.c  sort.h
DataStruct/Tree/: BiThrTree.c  tree_traverse  tree_traverse.c  tree_type  tree_type.c
DataStruct/huffmanTree/: huffman.cpp  huffman.h  main  main.cpp  queue.cpp  queue.h
Database/MySQL/: .sconsign.dblite  IMySQL.h  MySQL.cpp  MySQL.h  MySqlAbstract.h  SConstruct  main.cpp  sql_test
DesignPattern/: readme
DesignPattern/factory/: abs_factory.cpp  factory_method.cpp  simple_factory.cpp
DesignPattern/filter/: main.cpp
DesignPattern/observer/: main.cpp  observer.cpp  observer.h  subject.cpp  subject.h
DesignPattern/proxy/: main  main.cpp
DesignPattern/responsibility/: Handler.cpp  Handler.h  main.cpp
DesignPattern/singleton/: Singleton.hpp  main.cpp
EnginManager/Makefile_manager/: Makefile.1  Makefile.n
EnginManager/cmake_manager/multi_opt/: CMakeLists.txt  config.h  config.h.in  main.cpp
EnginManager/cmake_manager/multi_opt/math/: calc.cpp  calc.h
Lua/: test.lua
Utils/: CTimer.hpp  Singleton.hpp  main.cpp
(+22 files in other folders)
